--- a/stylesheets/sass/_general.scss
+++ b/stylesheets/sass/_general.scss
@@ -58,6 +58,7 @@ body {
 
 .content-formatted {
   @extend %clearfix;
+  word-wrap: break-word;
 
   h1,
   h2,
@@ -67,15 +68,6 @@ body {
   h6,
   p {
     margin-bottom: 0;
-  }
-
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    word-wrap: break-word;
   }
 
   h1,
